tests/invariants/fail/non-inductive.act
// The invariant x < 9 is true, but cannot be proved as it is not inductive.

// If we assume that the invariant holds at the start of the call to j, then
// there is an execution path (x == 7) where the invariant does not hold over
// the post state.

// A stronger invariant (e.g. x < 3) can succesfully be proven

contract C

constructor()

creates

    uint x := 0

invariants

    x < 9

transition f()

iff x == 0

    updates

        x := 1

transition g()

iff x == 1

    updates

        x := 2

transition j()

iff x == 7

    updates

        x := 100
